--- a/templates/exception/exception/access_denied.html.twig
+++ b/templates/exception/exception/access_denied.html.twig
@@ -11,7 +11,7 @@
                 </div>
               <div class="user_baner">
                 <div class="user_baner_text">
-                  <h1></h1><span>Nie masz dopstępu do tej strony!</span></div>
+                  <h1></h1><span>Nie masz dopstępu do tej strony lub twoja sesja wygasła!</span></div>
               </div>
               </div>
             </div>
