--- a/templates/menu_trainer_home_page.html.twig
+++ b/templates/menu_trainer_home_page.html.twig
@@ -21,6 +21,9 @@
                   <a href="{{ path("trainer_users")}}">Uczestnicy<br> <small>Lista próśb</small></a>
                 </div>
                 <div class="nav-link" id="hidden">
+                  <a href="{{ path('manage_subscription_trainer')}}">Subskrybcja<br> <small>Płatności</small></a>
+                </div>
+                <div class="nav-link" id="hidden">
                   <a href="{{ path("logout")}}">Wyloguj</a>
                 </div>
           </div>
@@ -61,10 +64,15 @@
             {% else %}
             <li>
             {% endif %}
-            <a href="#">Subskrybcja<br> <small>Płatności</small></a>
+            <a href="{{ path('manage_subscription_trainer')}}">Subskrybcja<br> <small>Płatności</small></a>
             </li>
           </ul>
-            <li class="">
+            <li class="notification_li">
+            <div class="justify-content-center mr-5">
+            {{ render(controller('App\\Controller\\NotificationController\\NotificationController::renderSubscriptionIsNearlyExpireNotificationForTrainer')) }}
+            </div>
+            </li>
+            <li class="notification_li">
             <div class="justify-content-center mr-5">
             {{ render(controller('App\\Controller\\NotificationController\\NotificationController::renderInvitationNotificationForTrainer')) }}
             {{ render(controller('App\\Controller\\NotificationController\\NotificationController::renderActiveParticipantsNotificationForTrainer')) }}
