--- a/templates/security/security/login.html.twig
+++ b/templates/security/security/login.html.twig
@@ -18,7 +18,7 @@
                       <input type="hidden" name="{{ path('user_home_page')}}" value="/account" />
                       <div class="text-danger">
                         {% if error %}
-                        <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+                        <div>{{ error.messageKey|trans(error.messageData, 'security')|raw }}</div>
                         {% endif %}
                       </div>
                       </form>
