--- a/templates/admin/admin/main_site_management.html.twig
+++ b/templates/admin/admin/main_site_management.html.twig
@@ -1,5 +1,5 @@
 {% extends "base.html.twig" %}
-{% set menu_name = "account_management" %}
+{% set menu_name = "main_site_management" %}
 {% set admin_role = "ROLE_ADMIN" %}
 {% set standar_user_role = "ROLE_USER" %}
 {% set trainer_role = "ROLE_TRAINER" %}
