--- a/templates/menu_trainer_home_page.html.twig
+++ b/templates/menu_trainer_home_page.html.twig
@@ -24,6 +24,9 @@
                   <a href="{{ path('manage_subscription_trainer')}}">Subskrybcja<br> <small>Płatności</small></a>
                 </div>
                 <div class="nav-link" id="hidden">
+                  <a href="{{ path('list_order')}}">Zamówienia<br> <small>Płatności</small></a>
+                </div>
+                <div class="nav-link" id="hidden">
                   <a href="{{ path("logout")}}">Wyloguj</a>
                 </div>
           </div>
@@ -65,6 +68,13 @@
             <li>
             {% endif %}
             <a href="{{ path('manage_subscription_trainer')}}">Subskrybcja<br> <small>Płatności</small></a>
+            </li>
+            {% if menu_name is defined and menu_name == 'payment'%}
+            <li class="active">
+            {% else %}
+            <li>
+            {% endif %}
+            <a href="{{ path('list_order')}}">Zamówienia<br> <small>Płatności</small></a>
             </li>
           </ul>
             <li class="notification_li">
